tdf#90566: memory leak: maChangeListeners is not properly disposed

+ exchange arguments of swap to use the same pattern as the other swap locations

Thank you Mike Kaganski!

Change-Id: Ie575d503349b3218c7a0211e1f81d791e995297e